--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="continer">
-        <h1>Cruds prject</h1>
+        <h1>Projects Manager</h1>
        <input type="text" placeholder="tittle"  id="tittle">
        <div class="collection">
               <input type="number" placeholder="price" id="price" onkeyup="totalprice()" required>
